# ovf2io

./: .gitignore  README.md  __init__.py  gen_test_ovfs.py  nist_sample_ovfv2.ovf  ovf2io.py  pyproject.toml  rect_bin4.ovf  releasesteps  setup.cfg  setup.py  spec.md  specs.md  test.py  todo.md
docs/: index.html  ovf2io.html  templates.html  utils.html
ovf2io/: __init__.py  _rect_utils.py  _templates.py  _utils.py
test_ovfs/: bin4_rectangular.ovf  bin8_irregular.ovf  text_irregular.ovf  text_rectangular.ovf
testing/: gen_reading_tests.py  test.sh  test_reading.py  test_writing.py
testing/reading_tests/: bin4_irregular.ovf  bin8_rectangular.ovf  df_bin4_rectangular.ovf  df_bin8_rectangular.ovf  df_text_rectangular.ovf  text_irregular.ovf  text_rectangular.ovf
testing/writing_tests/: irreg_bin4.ovf  irreg_bin8.ovf  irreg_text.ovf  rect_bin4.ovf  rect_bin8.ovf  rect_text.ovf  test_irreg_bin4_defaults.ovf  test_irreg_bin4_points_given.ovf  test_irreg_bin8_defaults.ovf  test_irreg_bin8_points_given.ovf  test_irreg_text_defaults.ovf  test_irreg_text_points_given.ovf  test_rect_bin4_defaults.ovf  test_rect_bin4xyz.ovf  test_rect_bin8_defaults.ovf  test_rect_bin8xyz.ovf  test_rect_text_defaults.ovf  test_rect_textp0cell.ovf
