[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ovf2io"
version = "0.10.1"
authors = [
  { name="William S. Parker", email="will.parker0@gmail.com" },
]
license = {file = "LICENSE"}
description = "Utility for reading and writing OOMMF Vector Field (.ovf) format. "
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
		"numpy"
]

[project.urls]
Homepage = "https://github.com/McMorranLab/ovf2io"
"Bug Tracker" = "https://github.com/McMorranLab/ovf2io/issues"
Documentation = "https://mcmorranlab.github.io/ovf2io/"
